--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">7July_Recycler_View_1_(Animal_Details)_You2</string>
+    <string name="app_name">Recycler_View_1_(Animal_Details)_You2</string>
 </resources>
